// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card it should filter out style props that are not allowed 1`] = `
.emotion-1 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-1 *,
.emotion-1 *::after,
.emotion-1 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  box-sizing: border-box;
  border-width: 2px;
  border-color: #e4e7e9;
  border-style: solid;
  border-radius: 4px;
  padding: 1.25rem;
  background-color: #ffffff;
}

<div
  className="emotion-1"
>
  <article
    className="emotion-0"
  />
</div>
`;

exports[`Card it should render children 1`] = `
.emotion-1 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-1 *,
.emotion-1 *::after,
.emotion-1 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  box-sizing: border-box;
  border-width: 2px;
  border-color: #e4e7e9;
  border-style: solid;
  border-radius: 4px;
  padding: 1.25rem;
  background-color: #ffffff;
}

<div
  className="emotion-1"
>
  <article
    className="emotion-0"
  >
    I AM A JEDI!!!!
  </article>
</div>
`;

exports[`Card it should render default values 1`] = `
.emotion-1 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-1 *,
.emotion-1 *::after,
.emotion-1 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  box-sizing: border-box;
  border-width: 2px;
  border-color: #e4e7e9;
  border-style: solid;
  border-radius: 4px;
  padding: 1.25rem;
  background-color: #ffffff;
}

<div
  className="emotion-1"
>
  <article
    className="emotion-0"
  />
</div>
`;

exports[`Card it should render default values unless overridden by the component 1`] = `
.emotion-1 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-1 *,
.emotion-1 *::after,
.emotion-1 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  box-sizing: border-box;
  border-width: 2px;
  border-color: #e4e7e9;
  border-style: solid;
  border-radius: 4px;
  padding: 1.25rem;
  padding-bottom: 4.75rem;
  background-color: #ffffff;
}

<div
  className="emotion-1"
>
  <article
    className="emotion-0"
  />
</div>
`;
